# synthetic_text_images

./: .gitignore  .gitmodules  README.md  pyproject.toml
data/: samiske_bokstaver.csv
fonts/saami_ocr_nodalida25/: full_font_info.csv  full_font_info_split.csv
fonts/saami_ocr_nodalida25/Nova_Cut/: OFL.txt
input/lipsum_example_data/lipsum1/: lipsum1.txt
input/lipsum_example_data/lipsum2/: lipsum2.txt
input/lipsum_example_data/lipsum3/: lipsum3.txt
scripts/: augment_data.py  augraphy_demo.py  chunk_test.py  create_data.py  create_distorted_data.py  example_text.txt  transform_text_test.py  xml-data.py
scripts/saami_ocr_nodalida25/: combine_datasets.py  combine_languages.py  create_dataset.py  create_dataset.sh  create_text_dataset.py  create_text_dataset.sh  dataset_readme.md.j2  evaluate_fonts.py  split_fonts.py
scripts/saami_ocr_nodalida25/templates/: multilanguage_dataset_readme.md.j2
scripts/simple_example/: create_lipsum_dataset.py
src/synthetic_ocr_data/: __init__.py  augraphy_utils.py  color.py  fonts.py  image_creation.py  image_processing.py  text_processing.py  utils.py
src/text_generation/: __init__.py  augraphy_utils.py  create.py  fonts.py  image.py  image_creation.py  image_processing.py  pipeline.py  text_processing.py  utils.py
tests/: conftest.py  test_check_font_support.py  test_create_datafiles.py  test_create_image_with_text.py  test_create_scanned_book_pipeline.py  test_get_bounding_box_and_image_size.py
tests/PipelineWrapper/: test_serialise.py
tests/augraphy_utils/: test_create_scanned_book_pipeline.py
tests/augraphy_utils/PipelineWrapper/: test_serialise.py
tests/color/: test_get_random_dark_color.py  test_get_random_light_color.py  test_is_dark_mode.py
tests/create/: test_create_line_image.py  test_create_line_images.py  test_get_bounding_box_and_image_size.py
tests/fonts/: test_check_font_support.py
tests/image/: test_distort_line_image.py  test_distort_line_images.py
tests/image_creation/: test_create_line_image.py  test_create_line_images.py  test_get_bounding_box_and_image_size.py
tests/image_processing/: test_distort_line_image.py  test_distort_line_images.py
tests/pipeline/: test_create_scanned_book_pipeline.py
tests/pipeline/PipelineWrapper/: test_serialise.py
tests/text_processing/: test_add_transformed_text_lines.py  test_add_word_to_chunk.py  test_calculate_candidate_length.py  test_chunkify_words.py  test_restart_chunk.py
tests/utils/GitInfo/: test_from_language_code.py
