[project]
name = "text_generation"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marie Roald", email = "roald.marie@gmail.com"},
]
dependencies = [
    "pillow>=10.4.0",
    "fonttools>=4.53.1",
    "pandas>=2.2.2",
    "augraphy @ file:///hdd/home/mariero/augraphy",
    "opencv-python>=4.10.0.84",
    "colorspacious>=1.1.2",
    "numpy<2",
    "datasets>=3.0.0",
    "lxml>=5.3.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.6.3",
    "pytest>=8.3.2",
]
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["I", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["synthetic_text_images"]